--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,16 +1,74 @@
-html,
-body {
-  padding: 0;
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap");
+
+* {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: var(--font);
 }
 
 a {
-  color: inherit;
   text-decoration: none;
 }
 
-* {
-  box-sizing: border-box;
+.title {
+  font-size: 45px;
+  text-align: center;
+  padding: 1rem 0;
+
+  background: -webkit-linear-gradient(
+    174.81deg,
+    #2200f1 -24%,
+    rgba(0, 209, 255, 0) 131.87%
+  );
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+
+@media (max-width: 768px) {
+  .title {
+    font-size: 30px;
+    padding: 0.5rem 0;
+  }
+}
+
+.container {
+  max-width: 1120px;
+  margin: 0 auto;
+}
+
+:root {
+  --col-white: #ebeef2;
+  --col-black: #40434b;
+  --col-success: #2de16a;
+  --col-warning: #fdbd41;
+  --col-danger: #ff0000;
+  --col-gray: #cdcecf;
+
+  --bg: linear-gradient(174.81deg, #2200f1 -24%, rgba(0, 209, 255, 0) 131.87%);
+  /* 2200F1 00D1FF */
+
+  /* Heading */
+  --heading-1: 40px;
+  --heading-2: 24px;
+  --heading-3: 15px;
+  --sub-heading: 16px;
+  --regular: 14px;
+
+  /* Font weight */
+  --heading-weight: 600;
+
+  /* Font */
+  --font: "Montserrat", sans-serif;
+
+  /* Shadow */
+  --main-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
+
+  /* breakpoints */
+  --bp-xs: 0;
+  --bp-sm: 576px;
+  --bp-md: 768px;
+  --bp-lg: 992px;
+  --bp-xl: 1200px;
+  --bp-xxl: 1400px;
 }
